# rust-zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  sqlx-data.json
.github/workflows/: audit.yml  general.yml
configuration/: base.yml  production.yml
frontend/: README.md  package-lock.json  package.json  vite.config.js
migrations/: 20210813183314_create_subscriptions_table.sql  20220320165727_add_status_to_subscriptions.sql  20220320174735_make_status_not_null_in_subscriptions.sql
profiles/: .env.template
scripts/: init_db.sh  refresh_sql_metadata.sh  remove_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs  subscription_token.rs
src/routes/: errors.rs  health_check.rs  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
templates/newsletters/: distribute_newsletter.html  distribute_newsletter.txt
templates/subscriptions/: confirm_subscription_email.html  confirm_subscription_email.txt
tests/: health_check.rs  subscriptions.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/common/: mod.rs
