[package]
name = "rust-zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
reqwest = "0.11"

[dev-dependencies]
actix-rt = "2.2.0"
tokio = "1"
