[package]
name = "rust-zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-files = "0.6.0"
sqlx = { version = "0.5.5", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
config = "0.11.0"
serde = { version = "1", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.5"
tracing-opentelemetry = "0.15.0"
opentelemetry = { version = "0.16.0", features = ["rt-tokio"] }
opentelemetry-jaeger = {version = "0.15.0", features = ["rt-tokio"] }
serde-aux = "2.2.0"
unicode-segmentation = "1.8.0"
validator = "0.14.0"
secrecy = { version = "0.8.0", features = ["serde"] }
rand = { version = "0.8", features = ["std_rng"] }
tera = "1.15.0"

[dev-dependencies]
actix-rt = "2.2.0"
tokio = {version = "1", features = ["rt", "macros"] }
once_cell = "1.8.0"
claim = "0.5.0"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
testcontainers = "0.12.0"
wiremock = "0.5.2"
serde_json = "1"
jsonpath_lib = "0.3.0"
linkify = "0.8.0"